Add more logs